# mr-vision

./: .env.example  .gitignore  .gitmodules  AUDIT_REPORT.md  CLAUDE.md  PETCT_IMPLEMENTATION_PROMPT.md  README.md  SESSION_CONTRACT.md  docker-compose.cpu.yml  docker-compose.yml  upload-dicoms.ps1
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_result_versioning.py  003_add_retry_count.py  004_rbac.py  005_retention_policy.py  006_multi_tenant.py  007_model_registry.py  008_ensemble.py  009_ab_testing.py  010_batch_upload.py  011_active_learning.py  012_alerting.py  013_features.py  014_critical_alerts.py  015_patient_demographics.py  016_roles_rbac.py  017_reading_workflow.py  018_patient_onboarding.py  019_order_clinical_fields.py  020_order_creatinine.py  021_order_body_part_optional.py  022_mammography_report.py  023_mammography_laterality.py  024_mri_report.py
backend/app/: config.py  main.py
backend/app/application/: ab_testing_service.py  active_learning_service.py  alerting_service.py  analytics_service.py  auth_service.py  batch_service.py  cds_service.py  cpt_service.py  ensemble_service.py  gpu_scheduler.py  job_orchestrator.py  llm_report_service.py  longitudinal_service.py  mammography_service.py  model_registry.py  onboarding_service.py  portal_service.py  qa_service.py  reading_service.py  report_service.py  result_service.py  retention_service.py  role_service.py  routing_service.py  study_service.py  usecase_registry.py  vlm_qa_service.py
backend/app/deidentify/: phi_scrubber.py
backend/app/dicom/: seg_generator.py  sr_generator.py  worklist_client.py
backend/app/domain/: enums.py  interfaces.py  models.py  permissions.py
backend/app/fhir/: client.py  fhir_export_service.py
backend/app/infrastructure/: metrics.py
backend/app/reports/: pdf_generator.py
backend/app/services/: dicom_export_service.py  fused_image_service.py  preview_generator.py
backend/scripts/: download_autopet3_weights.py  download_model.py  run_autopet3_predict.py
backend/tests/: conftest.py
nginx/: nginx.conf
(+161 files in other folders)
