[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-ai-platform"
version = "1.0.0"
description = "Production-grade AI-based MRI analysis platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "celery[redis]==5.4.0",
    "redis==5.0.7",
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "minio==7.2.7",
    "httpx==0.27.0",
    "requests>=2.31.0",
    "pydicom==2.4.4",
    "SimpleITK==2.3.1",
    "nibabel==5.2.1",
    "numpy==1.26.4",
    "scipy==1.14.0",
    # torch installed separately in Dockerfile (CPU or CUDA variant)
    "monai==1.4.0",
    "pyyaml==6.0.1",
    "jsonschema==4.23.0",
    "python-multipart==0.0.9",
    "structlog==24.4.0",
    "Pillow==10.4.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Auth (F1)
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    # PDF Reports (F18)
    "reportlab>=4.0",
    # FHIR (F11)
    "fhir.resources>=7.0.0",
    # WebSocket
    "websockets>=12.0",
    # LLM Report Generation (Phase 1)
    "google-generativeai>=0.8.0",
    # PET/CT pipelines
    "matplotlib>=3.8",
    "scikit-image>=0.21",
    "nilearn>=0.10",
    # MRI organ segmentation — nnU-Net based real model weights
    "totalsegmentator>=2.2.0",
    "nnunetv2>=2.4",
    # DICOM SR / Seg export (Phase 7)
    "highdicom>=0.22.0",
]

[project.optional-dependencies]
dicom-extras = [
    "pynetdicom>=2.0.0",
]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "black==24.4.2",
    "ruff==0.5.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
